links on mobile being weird, fixed

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -118,7 +118,12 @@ li {
 }
 
 /* Responsive adjustments */
-
+@media (max-width: 1000px) {
+    .landing {
+        padding: 30px 15px 20px;
+        font-size: 20px;
+    }
+}
 
 // landing canvas styling
 
